[Feature] Added Courts functionality (#64)
